--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,10 @@ body {
   @apply flex flex-row gap-2 justify-center items-center border-2 px-3 py-1 rounded-xl;
 }
 
+.btn-style {
+  @apply flex flex-row gap-2 justify-center items-center border-2 rounded-xl;
+}
+
 .btn-color {
   @apply bg-orange-500 border-orange-400 outline-green-800;
 }
@@ -31,4 +35,9 @@ body {
 
 .h {
   font-family: 'Pacifico', cursive;
+  @apply underline;
+}
+
+hr {
+  @apply border-2 w-full;
 }
